correcion animation coeur + overflow text menu // version desktop affichage encore buggé

--- a/SASS/partials/_animations.scss
+++ b/SASS/partials/_animations.scss
@@ -14,40 +14,44 @@ padding: 5px;
     position: relative;
 }
 .favorite {
+    display: inline-block;
     cursor: pointer;
     position: absolute;
     z-index: 1;
     opacity: 0%;
+    transition: all 0.4s ease-in-out;
+    background: linear-gradient(162deg, #ff79da 0%, #9356dc 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     &:hover {
         background: linear-gradient(162deg, #ff79da 0%, #9356dc 100%);
-        opacity: 100%;
-        transition: all 0.4s ease-in-out;        
+        opacity: 100%;                
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 }
 .add__favorite {    
     cursor: pointer;
-    position: relative;
+    position: relative;    
+    transition: opacity 0.2s ease-in-out;
     &:hover {
-        opacity: 0%;
-        transition: color 0.2s ease-in-out;       
+        opacity: 0%;       
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 }
 .menu__form--content {
     cursor: pointer;
-    animation: slideup 1s forwards;
+    animation: checkbox 1s forwards;
     opacity: 0;
 }
 
-.menu__form--content:nth-child(2) {animation-delay: calc(2s / 5);}
-.menu__form--content:nth-child(3) {animation-delay: calc(3.5s / 5);}
-.menu__form--content:nth-child(4) {animation-delay: calc(4.5s / 5);}
-.menu__form--content:nth-child(5) {animation-delay: calc(5.5s / 5);}
+.menu__form--content:nth-child(2) {animation-delay: 200ms;}
+.menu__form--content:nth-child(3) {animation-delay: 400ms;}
+.menu__form--content:nth-child(4) {animation-delay: 600ms;}
+.menu__form--content:nth-child(5) {animation-delay: 800ms;}
 
-@keyframes slideup {
+@keyframes checkbox {
     0% {
         transform: translatey(20px);
         opacity: 0%;
