--- a/SASS/partials/_menu.scss
+++ b/SASS/partials/_menu.scss
@@ -44,6 +44,7 @@
         }
     }
     &__form--content {
+        height: 69px;
         display: flex;
         background-color: white;   
         margin: 10px 0px;   
@@ -76,6 +77,7 @@
 .content_flex {
     display: flex;
     overflow: hidden;
+    white-space: nowrap;
     flex-direction: column;
     padding: 10px;
 }
