--- a/SASS/partials/_restaurants.scss
+++ b/SASS/partials/_restaurants.scss
@@ -31,7 +31,6 @@
     border-radius: 20px;
     position: relative;
     margin-bottom: 20px;
-    max-width: 490px;
     &-nouveau {
         width: 60px;
         font-size: 14px;
