--- a/assets/styles.css
+++ b/assets/styles.css
@@ -130,7 +130,6 @@
   border-radius: 20px;
   position: relative;
   margin-bottom: 20px;
-  max-width: 490px;
 }
 .cards-nouveau {
   width: 60px;
@@ -318,6 +317,7 @@
   top: 15px;
 }
 .menu__form--content {
+  height: 69px;
   display: flex;
   background-color: white;
   margin: 10px 0px;
@@ -349,6 +349,7 @@
 .content_flex {
   display: flex;
   overflow: hidden;
+  white-space: nowrap;
   flex-direction: column;
   padding: 10px;
 }
@@ -415,15 +416,19 @@
 }
 
 .favorite {
+  display: inline-block;
   cursor: pointer;
   position: absolute;
   z-index: 1;
   opacity: 0%;
+  transition: all 0.4s ease-in-out;
+  background: linear-gradient(162deg, #ff79da 0%, #9356dc 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .favorite:hover {
   background: linear-gradient(162deg, #ff79da 0%, #9356dc 100%);
   opacity: 100%;
-  transition: all 0.4s ease-in-out;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -431,37 +436,37 @@
 .add__favorite {
   cursor: pointer;
   position: relative;
+  transition: opacity 0.2s ease-in-out;
 }
 .add__favorite:hover {
   opacity: 0%;
-  transition: color 0.2s ease-in-out;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .menu__form--content {
   cursor: pointer;
-  animation: slideup 1s forwards;
+  animation: checkbox 1s forwards;
   opacity: 0;
 }
 
 .menu__form--content:nth-child(2) {
-  animation-delay: 0.4s;
+  animation-delay: 200ms;
 }
 
 .menu__form--content:nth-child(3) {
-  animation-delay: 0.7s;
+  animation-delay: 400ms;
 }
 
 .menu__form--content:nth-child(4) {
-  animation-delay: 0.9s;
+  animation-delay: 600ms;
 }
 
 .menu__form--content:nth-child(5) {
-  animation-delay: 1.1s;
+  animation-delay: 800ms;
 }
 
-@keyframes slideup {
+@keyframes checkbox {
   0% {
     transform: translatey(20px);
     opacity: 0%;
